<resources>
    <string name="app_name">WebServiceLab</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_signin">SignInActivity</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="enter_prereqs">Enter Prereqs</string>
    <string name="enter_course_id_ex_tces460">Enter Course Id: (Ex: TCES460)</string>
    <string name="enter_long_course_description">Enter Long Course Description:</string>
    <string name="add_course">ADD COURSE</string>
    <string name="edit_course">EDIT COURSE</string>
    <string name="enter_short_course_description_ex_operating_systems">Enter Short Course Description: \n (Ex: Operating Systems)</string>
    <string name="course_id">Course ID</string>
    <string name="editText_edit_course_id">editText_edit_course_id</string>

    <string name="LOGIN_PREFS">edu.tacoma.uw.webserviceslab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">LOGOUT</string>

    <string name="LOGIN_FILE"> com.example.hinds.webservicelab.LOGIN_FILE</string>
</resources>
