<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.hinds.webservicelab.CourseEditFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_edit_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="270dp"
            android:layout_marginStart="270dp"
            android:layout_marginTop="16dp"
            android:onClick="addCourse"
            android:text="@string/add_course"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_edit_course_prereqs"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/editText_edit_course_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_course_id_ex_tces460"

            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <EditText
            android:id="@+id/editText_edit_course_short_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_short_course_description_ex_operating_systems"
            android:inputType="textPersonName"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/editText_edit_course_id"
            app:layout_constraintTop_toBottomOf="@+id/editText_edit_course_id"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/editText_edit_course_id"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <EditText
            android:id="@+id/editText_edit_course_long_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_long_course_description"
            android:inputType="textPersonName"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/editText_edit_course_short_desc"
            app:layout_constraintTop_toBottomOf="@+id/editText_edit_course_short_desc"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/editText_edit_course_short_desc"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <EditText
            android:id="@+id/editText_edit_course_prereqs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_prereqs"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="@+id/editText_edit_course_long_desc"
            app:layout_constraintTop_toBottomOf="@+id/editText_edit_course_long_desc"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/editText_edit_course_long_desc"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>
